<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ViewModel"
            type="ng.mathemandy.authentication.viewmodel.LoginFragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/root_layout"
        android:layout_height="match_parent"
        android:background="#E0E0E0">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                ​
                <View
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/bubble_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                ​

                <View
                    android:id="@+id/view"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/guideline_top" />
                ​

                <View
                    android:id="@+id/view_refresh"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@+id/view" />
                ​
                ​

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@{ViewModel.userName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />
                ​

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.25" />
                ​

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/round_button"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:text="@={ViewModel.password}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
                ​
                ​

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_button"
                    android:text="Log In"
                    android:textAllCaps="false"
                    android:onClick="@{() -> ViewModel.loginUser()}"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    app:backgroundTint="#E0E0E0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordET" />
                ​
                ​

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Forgot Password?"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_login" />
                ​
                ​
                ​
            </androidx.constraintlayout.widget.ConstraintLayout>
            ​
        </androidx.cardview.widget.CardView>
        ​
        ​
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>